<resources>
    <string name="app_name">Ristek Calculator</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="button0">0</string>
    <string name="buttonDot">.</string>
    <string name="buttonMult"> * </string>
    <string name="buttonAdd"> + </string>
    <string name="buttonDiv"> / </string>
    <string name="buttonMin"> - </string>
    <string name="buttonClear">C</string>
    <string name="buttonEq">=</string>
    <string name="buttonDel">DEL</string>
    <string name="syntaxError">SYNTAX ERROR</string>
    <string name="title_activity_login">Sign in</string>
    <string name="usernameLabel">Username: </string>
    <string name="passwordLabel">Password: </string>
    <string name="showPassword">Show password</string>
    <string name="loginButton">Sign in</string>
    <string name="registerButton">Sign up</string>
    <string name="SignUpRequest">Doesn\'t have an account? Sign up!</string>
    <string name="cancel">Cancel</string>
    <string name="stateOpp">OPP</string>
</resources>
